--- a/Der gro_e Geometricus.html
+++ b/Der gro_e Geometricus.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Der große Geometricus.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Der große Geometricus" startnode="1" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F7F8AFD2-A206-49D0-8A0E-31FB7D3831C5" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Anfang" tags="" position="600,275" size="100,100">Kroton 530 v.Chr. Pythagoras von Samos ist gerade dabei eine Schule zu gründen um die pythagoreische Art des Lebens zu lehren, bei der es darum geht eine disziplinierte und bescheidene Lebensweise zu pflegen.
+<tw-storydata name="Der große Geometricus" startnode="1" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F7F8AFD2-A206-49D0-8A0E-31FB7D3831C5" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Anfang" tags="" position="650,275" size="100,100">Kroton 530 v.Chr. Pythagoras von Samos ist gerade dabei eine Schule zu gründen um die pythagoreische Art des Lebens zu lehren, bei der es darum geht eine disziplinierte und bescheidene Lebensweise zu pflegen.
 Pythagoras ist zu diesem Zeitpunkt bereits vor Polykrates geflohen, da er eine gänzlich andere politische Meinung pflegte.
 Gerade ist er dabei ein paar Möbel in seiner neu gegründeten Schule zu rücken.
 
@@ -23,7 +23,7 @@ Gerade ist er dabei ein paar Möbel in seiner neu gegründeten Schule zu rücken
 
 [[nach links verschieben]]
 
-[[nach rechts verschieben]]</tw-passagedata><tw-passagedata pid="4" name="nach rechts verschieben" tags="" position="825,550" size="100,100">Pythagoras verschiebt das Objekt nach rechts.
+[[nach rechts verschieben]]</tw-passagedata><tw-passagedata pid="4" name="nach rechts verschieben" tags="" position="875,525" size="100,100">Pythagoras verschiebt das Objekt nach rechts.
 
 Was machst er als nächstes?
 
@@ -32,7 +32,7 @@ Was machst er als nächstes?
 [[nach links verschieben]] 
 
 [[reicht mit dem Verschieben]]
-</tw-passagedata><tw-passagedata pid="5" name="nach links verschieben" tags="" position="525,525" size="100,100">Pythagoras verschiebt das Objekt nach links.
+</tw-passagedata><tw-passagedata pid="5" name="nach links verschieben" tags="" position="450,525" size="100,100">Pythagoras verschiebt das Objekt nach links.
 
 Was machst er als nächstes?
 
@@ -42,7 +42,70 @@ Was machst er als nächstes?
 [[nach rechts verschieben]] 
 
 [[reicht mit dem Verschieben]] 
-</tw-passagedata><tw-passagedata pid="6" name="reicht mit dem Verschieben" tags="" position="675,700" size="100,100">Pythagoras hat jetzt genug vom Verschieben und gönnt sich einen Moment Ruhe.
+</tw-passagedata><tw-passagedata pid="6" name="reicht mit dem Verschieben" tags="" position="675,625" size="100,100">Pythagoras hat jetzt genug vom Verschieben und gönnt sich einen Moment Ruhe.
+
+Nachdem er mit dem Gönnen fertig ist, hat er auf einmal eine Idee!
+
+[[Idee von Pythagoras anschauen]]
+
+oder
+
+[[Idee von Pythagoras anschauen]]</tw-passagedata><tw-passagedata pid="7" name="Idee von Pythagoras anschauen" tags="" position="675,825" size="100,100">Pythagoras kritzelt etwas auf einen Papyrus den er irgendwo noch herumliegen hat, eine Formel die er schon einmal irgendwo gesehen hatte:
+a^^2^^+b^^2^^=c^^2^^
+
+Ob diese Formel in ferner Zukunft wohl noch eine Bedeutung haben wird? Wahrscheinlich wird sie das und vielen jungen Menschen große Freude bringen.
+
+Aber jetzt auf zu neuen Entdeckungen, doch vorher...
+
+[[etwas essen]]
+
+[[etwas trinken]]
+
+
+</tw-passagedata><tw-passagedata pid="8" name="etwas essen" tags="" position="500,950" size="100,100">Ein paar Teller Fasolia sind schnell geleert, uff aber da drückt jetzt schon ganz gewaltig etwas.
+
+
+
+Jetzt schnell auf zum Krepis, wo war nochmal das Xylospongium?
+
+
+[[Xylospongium suchen]]
+</tw-passagedata><tw-passagedata pid="9" name="etwas trinken" tags="" position="850,950" size="100,100">Ein paar Becher Kykeon sind schnell geleert, uff aber da drückt jetzt schon ganz gewaltig etwas.
+
+
+
+Jetzt schnell auf zum Krepis, wo war nochmal das Xylospongium?
+
+
+[[Xylospongium suchen]]
+</tw-passagedata><tw-passagedata pid="10" name="Xylospongium suchen" tags="" position="675,1050" size="100,100">Wo hat Pythagoras nur das Xylospongium hingetan?
+
+Der Druck wird immer größer und er findet es einfach nicht, doch da fällt ihm ein merkwürdiges Papier auf, das er noch nie zuvor gesehen hat, es ist auch in einer Sprache geschrieben, die er nicht kennt.
+Aber die Symbole darauf, die kommen ihm bekannt vor... ja das ist Mathematik.
+Vor lauter Begeisterung vergisst er sein Problem und nimmt das Papier in die Hand...
+
+[[Xylospongium weitersuchen ]]
+
+[[Papier lesen]]</tw-passagedata><tw-passagedata pid="11" name="Xylospongium weitersuchen " tags="" position="525,1125" size="100,100">Ah da ist das Xylospongium ja, auf zum Krepsis.
+
+Das dringende Problem ist erledigt und Pythagoras kann sich endlich dem Papier widmen.
+
+[[Papier lesen]] 
+</tw-passagedata><tw-passagedata pid="12" name="Papier lesen" tags="" position="750,1200" size="100,100">Pythagoras hält das Papier in die Hand und Funken zischen plötzlich von dem Papier durch die Luft. Erschrocken will er das Papier zuerst loslassen, aber die Neugier ist stärker und er hält es fest. 
+Mitten im Raum entsteht ein Wirbel, der ein Fenster in eine andere Welt darstellt. Zumindest hatte er es später so beschrieben. 
+Auf der anderen Seite des Fensters sah er Thomas Robert Matlhus und konnte auf einmal auch alles verstehen was auf dem Papier stand und was er sagte.
+
+Das Schicksal hatte ihm einen Einblick in die Zukunft der Mathematik gewährt, genauer in den Bereich der Exponentialfunktionen.
+
+Damit du mit ihm Schritt halten kannst, führe die folgenden Anweisungen aus:
+
+Lies den Kasten im Buch auf S. 105 und die Texte darunter, formuliere daraus einen Satz mit deinen eigenen Worten, der die Inhalte dort beschreibt.
+
+[[erledigt]]
+</tw-passagedata><tw-passagedata pid="13" name="erledigt" tags="" position="750,1325" size="100,100">Neben dem Papier erschien nun auch ein Buch voller Aufgaben bei Pythagoras, auf das er sich freudig stürzte.
+
+Damit du mit ihm Schritt halten kannst, erledige die Aufgaben:
+S.106/1,2,4
 
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
